--- a/css/style.css
+++ b/css/style.css
@@ -73,4 +73,9 @@ footer p{
     font-weight: bold;    
 }
 
-
+table,td, th{
+    border: 2px solid black;
+    text-align: center;
+    
+    font-size: large;
+}
