--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header{
 header img{
     display: inline-block;
     position: relative;
-    width: 150px;
+    width: 200px;
     height: 140px;
     margin-left: 10px;
     margin-top: 1px;
@@ -18,7 +18,7 @@ header img{
 header h1{
     position: absolute;
     top: 50px;
-    margin-left: 165px;
+    margin-left: 215px;
     color: white;
     font-size: xx-large;
     font-weight: bolder;
@@ -67,7 +67,7 @@ footer{
 
 footer p{
     position: absolute;
-    left: 75px;
+    left: 175px;
     top: 10px;
     font-size: large;
     font-weight: bold;    
@@ -76,6 +76,73 @@ footer p{
 table,td, th{
     border: 2px solid black;
     text-align: center;
-    
+    border-collapse: collapse;
     font-size: large;
+}
+
+body{
+    height: 2000px;
+}
+main{
+    height: 100%;
+}
+
+main table{
+    text-align: center;
+    margin-left:auto; 
+    margin-right:auto;
+}
+
+li{
+    font-size: large;
+    
+}
+
+footer img{
+    position: absolute;
+    height: 60px;
+    left: 5px;
+    top: 5px;
+
+}
+
+
+main{
+    height: 100%;
+}
+
+#div1 p{
+    font-size: larger;
+}
+
+#div1 img{
+    text-align: center;
+    margin-left:25px; 
+    width: 250px;
+    height: 200px;
+    
+}
+
+#div2 img{
+    text-align: center;
+    margin-left:150px; 
+    width: 250px;
+    height: 200px;
+    padding: 20px;
+
+}
+
+#div3 img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+}
+
+#div3 p{
+    font-size: larger;
+    font-weight: bold;
+    font-style: italic;
+    font-family: cursive;
 }
