--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,29 @@ main{
     font-style: italic;
     font-family: cursive;
 }
+
+#form-id
+{
+  margin-top: 50px;
+  font-size: large;
+  font-weight: bold;
+  width: 650px;
+  margin-left: 25px;
+}
+form legend{
+    font-size: larger;
+    font-weight: bolder;
+}
+
+form{
+    border:2px solid black;
+    background-color: burlywood;
+}
+
+button{
+    border: 1px solid black;
+    background-color: white;
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
+}
